index.css
/* ... */
html {
  font-size: 62.5%;
  /* (16/10)*100 = 62.5% => 1rem = 10px */
  box-sizing: border-box;
  scroll-behavior: smooth;
}

@media (max-width: 1000px) {
  html {
    font-size: 52%;
  }
}

body {
  font-size: var(--font-size-small);
  font-family: var(--font-stack);
  font-weight: 400;
  color: var(--white-1);
  line-height: var(--line-height-normal);
  background: var(--black);
  overflow-x: hidden;
}

.row {
  max-width: var(--container-max-width);
  margin: 0 auto;
}

.column {
  max-width: var(--container-max-width);
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  text-align: center;
  justify-content: center;
  filter: invert(100%) grayscale(80%) opacity(0.8);
  transition: filter 0.3s, background-color 0.3s;
  padding: 10px;
}

.column:hover {
  filter: none;
  background-color: #fff;
  border-radius: 10px;
}

@media (max-width: 1340px) {
  .row {
    max-width: 1100px;
  }
}

@media (max-width: 1240px) {
  .row {
    padding: 0 var(--gutter-medium);
  }
}

@media (max-width: 600px) {
  .row {
    padding: 0 var(--gutter-normal);
  }
}

@media (max-width: 600px) {
  .row {
    padding: 0 var(--gutter-small);
  }
}

section {
  padding: var(--gutter-huge) 0;
  border-bottom: var(--border-light);
}

img {
  object-fit: contain;
  max-width: 100%;
}

/* --------------------------------------- */
/* ----- Headlines and Paragraphs ----- */
/* --------------------------------------- */

h1,
h2,
h3 {
  font-family: "Jost", sans-serif;
  font-weight: 400;
  line-height: var(--line-height-small);
  color: var(--white);
}

.heading-primary {
  line-height: 1;
  font-size: var(--font-size-huge);
  font-weight: 400;
}

@media (max-width: 900px) {
  .heading-primary {
    margin-top: 30%;
    font-size: 6.5rem;
  }
}

h2 {
  font-size: var(--font-size-large);
  margin-bottom: var(--gutter-medium);
}

h2::after {
  content: "";
  display: block;
  height: 2px;
  width: 10rem;
  background: var(--pink);
  margin: var(--gutter-small) 0;
}

h3 {
  font-size: var(--font-size-medium-1);
  margin-bottom: var(--gutter-small);
}

@media (max-width: 500px) {
  .heading-primary {
    font-size: var(--font-size-large);
  }

  h2 {
    font-size: var(--font-size-medium-1);
  }

  h3 {
    font-size: var(--font-size-medium);
  }

  .location {
    display: block;
  }
}

p {
  margin: var(--gutter-small-1) 0;
  text-align: justify;
}

@media (max-width: 900px) {
  p {
    max-width: var(--container-small-width);
  }

  .location {
    display: block;
  }
}

/* --------------------------------------- */
/* ----- Buttons and Links ----- */
/* --------------------------------------- */

a {
  color: var(--white);
  font-weight: 400;
  font-family: "Jost", sans-serif;
  transition: all 0.2s;
  outline: 2px solid transparent;
}

::-moz-focus-inner {
  border: 0;
}

button:focus,
a:focus {
  outline: 2px solid var(--pink);
}

body:not(.user-is-tabbing) button:focus,
body:not(.user-is-tabbing) a:focus {
  outline: none;
}

.link:hover {
  color: var(--pink);
}

.btn {
  position: relative;
  display: inline-block;
  padding: 1rem 4.2rem;
  text-decoration: none;
  color: inherit;
  border: 1px solid var(--pink);
  font-weight: 400;
  margin-top: 0.4rem;
  text-align: center;
  width: 280px;
  margin-left: 25px;
}

.btn:focus {
  outline: none;
}

.btn::after {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 100%;
  background: var(--white);
  height: 100%;
  z-index: -1;
  transition: all 0.2s cubic-bezier(1, 0.68, 0.16, 0.9);
}

.btn:hover::after,
.btn:focus::after {
  right: 0;
  background: var(--pink);
}

.btn--pink {
  background: var(--pink);
  transition: all 0.2s;
}

.btn--pink::after {
  display: none;
}

.btn--pink:hover,
.btn--pink:focus {
  background: transparent;
}

.link__text {
  position: relative;
  display: inline-block;
  padding: 0.6rem;
  color: inherit;
  text-decoration: none;
  border-bottom: 1px solid var(--pink);
}

.link__text::after {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 100%;
  background: var(--white);
  height: 100%;
  z-index: -1;
  transition: all 0.2s cubic-bezier(1, 0.68, 0.16, 0.9);
}

.link__text:focus {
  outline: none;
}

.link__text:hover::after,
.link__text:focus:after {
  right: 0;
  background: var(--pink);
}

.link__text span {
  padding-left: 1rem;
  font-family: sans-serif;
}

/* ----- Back to Top ----- */

.back-to-top {
  position: fixed;
  bottom: 7rem;
  right: 4rem;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 5.5rem;
  width: 5.5rem;
  background-color: var(--pink);
  border-radius: 50%;
  z-index: 10;
  visibility: hidden;
  transition: all 0.4s;
}

.back-to-top__image {
  height: 70%;
}

@media (max-width: 900px) {
  .back-to-top {
    right: 2rem;
  }
}

@media (max-width: 500px) {
  .back-to-top {
    right: 1rem;
  }
}

.whatsapp {
  position: fixed;
  bottom: 1rem;
  right: 4rem;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 5.5rem;
  width: 5.5rem;
  border-radius: 50%;
  z-index: 10;
}

@media (max-width: 900px) {
  .whatsapp {
    right: 2rem;
  }
}

@media (max-width: 500px) {
  .whatsapp {
    right: 1rem;
  }
}

/* --------------------------------------- */
/* ----- Navigation ----- */
/* --------------------------------------- */

.nav {
  display: flex;
  justify-content: flex-start;
  padding: var(--gutter-normal) 0;
  position: absolute;
  transition: all 0.5s ease;
}

.nav__items {
  display: flex;
  list-style: none;
}

.nav__item:not(:last-child) {
  margin-right: var(--gutter-medium);
}

@media (max-width: 500px) {
  .nav {
    justify-content: center;
  }
}

@media (max-width: 400px) {
  .nav__item:not(:last-child) {
    margin-right: var(--gutter-normal);
  }
}

@media (max-width: 300px) {
  .nav {
    font-size: var(--font-size-small);
  }
}
/* ... */

